amazon-mockup-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazon-mockup-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amazonmockup
  template:
    metadata:
      labels:
        app: amazonmockup
    spec:
      containers:
        - name: amazonmockup
          image: local/amazon-mockup-web:1.0
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1.0"
---
apiVersion: v1
kind: Service
metadata:
  name: amazon-mockup-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: amazonmockup
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
