data-selector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-selector-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataselector
  template:
    metadata:
      labels:
        app: dataselector
    spec:
      containers:
        - name: dataselector
          image: local/data-selector-web:1.0
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: data-selector-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: dataselector
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
