microservices-nodeport-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: amazonmockup-nodeport-service
spec:
  type: NodePort
  selector:
    app: amazonmockup
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: redditmockup-nodeport-service
spec:
  type: NodePort
  selector:
    app: redditmockup
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-nodeport-service
spec:
  type: NodePort
  selector:
    app: mssql
  ports:
    - name: mssql
      protocol: TCP
      port: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-nodeport-service
spec:
  type: NodePort
  selector:
    app: mongodb
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
